dialog now has auto height; seems to fix spacing issues with longer lists

--- a/src/components/ConfirmationDialog.module.css
+++ b/src/components/ConfirmationDialog.module.css
@@ -58,7 +58,7 @@
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   width: 400px;
-  height: 450px;
+  height: auto;
   max-width: 90%;
   text-align: center;
   border-color: white;
